--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ python-decouple==3.8
 Pillow==10.1.0
 python-dotenv==1.0.0
 django-jazzmin==3.0.1
+
+# RSS Feed and Celery dependencies
+feedparser==6.0.10
+requests==2.31.0
+celery==5.3.4
+redis==5.0.1
+python-dateutil==2.8.2
